# rust-gb

./: .gitignore  Cargo.toml
.cargo/: config.toml
benches/: my_benchmark.rs
gb-core/: Cargo.toml
gb-core/src/: gameboy.rs  lib.rs  util.rs
gb-core/src/cpu/: address.rs  alu.rs  flags.rs  mod.rs  opcodes.rs  registers.rs  test.rs
gb-core/src/cpu/test/: boot_test.rs  cb_test.rs  test_0x.rs  test_1x.rs  test_2x.rs  test_3x.rs  test_4x.rs  test_5x.rs  test_6x.rs  test_7x.rs  test_add16.rs  test_add16_sp_e.rs  test_ax.rs  test_cx.rs  test_dec16.rs  test_ex.rs  test_fx.rs  test_inc16.rs  test_load16.rs  test_load16_hl_sp_e.rs  test_load16_sp_hl.rs  test_pop16.rs  test_push16.rs  test_roms.rs
gb-core/src/hardware/: boot_rom.rs  cartridge.rs  color_palette.rs  input.rs  interrupt_handler.rs  mod.rs  ppu.rs  rom.rs  sound.rs  timer.rs  work_ram.rs
gb-core/src/memory/: mmu.rs  mod.rs
gb-core/src/util/: blip_buf.rs  int.rs
gb-desktop/: Cargo.toml  README.md
gb-desktop/src/: fb_screen.rs  main.rs
src/: controller.rs  fb_screen.rs  gameboy.rs  gl_screen.rs  main.rs
src/cpu/: address.rs  alu.rs  cpu.rs  error.rs  flags.rs  interrupt_handler.rs  interrupt_manager.rs  mod.rs  opcodes.rs  registers.rs  test.rs  toycpu.rs
src/cpu/op/: arguments.rs  mod.rs  opcodes.rs
src/cpu/test/: test_0x.rs  test_3x.rs  test_4x.rs  test_7x.rs  test_add16_sp_e.rs  test_fx.rs  test_load16.rs  test_load16_hl_sp_e.rs  test_load16_sp_hl.rs  test_pop16.rs
src/hardware/: cartridge.rs  color_palette.rs  interrupt_handler.rs  mod.rs  ppu.rs  timer.rs  work_ram.rs
src/memory/: mod.rs  nmmu.rs
