[package]
name = "rust-gb"
version = "0.1.0"
authors = ["plozano <pabloloz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-core = { version = "*", path = "gb-core" }
glium = { version = "0.29", default_features = false, features = [ "glutin" ] }
minifb = "0.19.2"
zip = "0.5"
