[package]
name = "rust-gb"
version = "0.1.0"
authors = ["plozano <pabloloz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-core = { version = "*", path = "gb-core" }
glium = { version = "0.29", default-features = false, features = ["glutin"] }
minifb = "0.19.2"
zip = "0.5"
env_logger = "0.11"
log = "0.4"
serde_json = { version = "=1.0.109", optional = false }
# [dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true


[profile.dev.build-override]
codegen-units = 8
debug = true
debug-assertions = true
opt-level = 0
overflow-checks = true


[profile.bench]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
