[package]
name = "gb-core"
version = "0.1.0"
authors = ["plozano <pabloloz@gmail.com>"]
edition = "2021"


[dependencies]
bitflags = "2.6.0"
num-derive = "0.4.2"
num-traits = {version = "0.2.19", default-features = false, features = ["libm"]}
arrayvec = { version = "0.7.6", default-features = false }
