[package]
name = "gb-core"
version = "0.1.0"
authors = ["plozano <pabloloz@gmail.com>"]
edition = "2021"


[dependencies]
bitflags = "2.6.0"
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
arrayvec = { version = "0.7.6", default-features = false }
log = "0.4"

serde = { version = "1.0.188", optional = true, features = ["derive"] }
#serde_json = { version = "=1.0.109", optional = true }
serde-big-array = { version = "0.5.1", optional = true }
[dev-dependencies]
env_logger = "0.11"


[features]
default = ["std"]
std = ["serde"]
serde = [
    "dep:serde",
    "dep:serde-big-array",
    #"dep:serde_json",
    "bitflags/serde",
]
